cmake_minimum_required(VERSION 2.6)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -pg -Wall")

add_library(EUTRA_RRC_Definitions_a00_lib
  BCCH_BCH_Message.cc
  BCCH_BCH_MessageType.cc
  BCCH_DL_SCH_Message.cc
  BCCH_DL_SCH_MessageType.cc
  MCCH_Message.cc
  MCCH_MessageType.cc
  PCCH_Message.cc
  PCCH_MessageType.cc
  DL_CCCH_Message.cc
  DL_CCCH_MessageType.cc
  DL_DCCH_Message.cc
  DL_DCCH_MessageType.cc
  UL_CCCH_Message.cc
  UL_CCCH_MessageType.cc
  UL_DCCH_Message.cc
  UL_DCCH_MessageType.cc
  CounterCheck.cc
  CounterCheck_r8_IEs.cc
  CounterCheck_v8a0_IEs.cc
  DRB_CountMSB_InfoList.cc
  DRB_CountMSB_Info.cc
  CounterCheckResponse.cc
  CounterCheckResponse_r8_IEs.cc
  CounterCheckResponse_v8a0_IEs.cc
  DRB_CountInfoList.cc
  DRB_CountInfo.cc
  CSFBParametersRequestCDMA2000.cc
  CSFBParametersRequestCDMA2000_r8_IEs.cc
  CSFBParametersRequestCDMA2000_v8a0_IEs.cc
  CSFBParametersResponseCDMA2000.cc
  CSFBParametersResponseCDMA2000_r8_IEs.cc
  CSFBParametersResponseCDMA2000_v8a0_IEs.cc
  DLInformationTransfer.cc
  DLInformationTransfer_r8_IEs.cc
  DLInformationTransfer_v8a0_IEs.cc
  HandoverFromEUTRAPreparationRequest.cc
  HandoverFromEUTRAPreparationRequest_r8_IEs.cc
  HandoverFromEUTRAPreparationRequest_v890_IEs.cc
  HandoverFromEUTRAPreparationRequest_v920_IEs.cc
  HandoverFromEUTRAPreparationRequest_r10_IEs.cc
  LoggedMeasurementsConfiguration_r10.cc
  LoggedMeasurementsConfiguration_r10_IEs.cc
  AreaConfiguration_r10.cc
  CellGlobalIdList_r10.cc
  TrackingAreaCodeList_r10.cc
  MasterInformationBlock.cc
  MBSFNAreaConfiguration_r9.cc
  MBSFNAreaConfiguration_v930_IEs.cc
  CommonSF_AllocPatternList_r9.cc
  MeasurementReport.cc
  MeasurementReport_r8_IEs.cc
  MeasurementReport_v8a0_IEs.cc
  MobilityFromEUTRACommand.cc
  MobilityFromEUTRACommand_r8_IEs.cc
  MobilityFromEUTRACommand_v8a0_IEs.cc
  MobilityFromEUTRACommand_r9_IEs.cc
  MobilityFromEUTRACommand_v930_IEs.cc
  Handover.cc
  CellChangeOrder.cc
  SI_OrPSI_GERAN.cc
  E_CSFB_r9.cc
  Paging.cc
  Paging_v890_IEs.cc
  Paging_v920_IEs.cc
  PagingRecordList.cc
  PagingRecord.cc
  PagingUE_Identity.cc
  IMSI.cc
  IMSI_Digit.cc
  ProximityIndication_r9.cc
  ProximityIndication_r9_IEs.cc
  ProximityIndication_v930_IEs.cc
  RNReconfiguration_r10.cc
  RNReconfiguration_r10_IEs.cc
  SystemInfoChange_r10.cc
  RNReconfigurationComplete_r10.cc
  RNReconfigurationComplete_r10_IEs.cc
  RRCConnectionReconfiguration.cc
  RRCConnectionReconfiguration_r8_IEs.cc
  RRCConnectionReconfiguration_v890_IEs.cc
  RRCConnectionReconfiguration_v920_IEs.cc
  RRCConnectionReconfiguration_v10xy_IEs.cc
  SCellToAddModList_r10.cc
  SCellToAddMod_r10.cc
  SCellToReleaseList_r10.cc
  SecurityConfigHO.cc
  RRCConnectionReconfigurationComplete.cc
  RRCConnectionReconfigurationComplete_r8_IEs.cc
  RRCConnectionReconfigurationComplete_v8a0_IEs.cc
  RRCConnectionReconfigurationComplete_v10xy_IEs.cc
  RRCConnectionReestablishment.cc
  RRCConnectionReestablishment_r8_IEs.cc
  RRCConnectionReestablishment_v8a0_IEs.cc
  RRCConnectionReestablishmentComplete.cc
  RRCConnectionReestablishmentComplete_r8_IEs.cc
  RRCConnectionReestablishmentComplete_v920_IEs.cc
  RRCConnectionReestablishmentComplete_v8a0_IEs.cc
  RRCConnectionReestablishmentComplete_v10xy_IEs.cc
  RRCConnectionReestablishmentReject.cc
  RRCConnectionReestablishmentReject_r8_IEs.cc
  RRCConnectionReestablishmentReject_v8a0_IEs.cc
  RRCConnectionReestablishmentRequest.cc
  RRCConnectionReestablishmentRequest_r8_IEs.cc
  ReestabUE_Identity.cc
  ReestablishmentCause.cc
  RRCConnectionReject.cc
  RRCConnectionReject_r8_IEs.cc
  RRCConnectionReject_v8a0_IEs.cc
  RRCConnectionRelease.cc
  RRCConnectionRelease_r8_IEs.cc
  RRCConnectionRelease_v890_IEs.cc
  RRCConnectionRelease_v920_IEs.cc
  ReleaseCause.cc
  RedirectedCarrierInfo.cc
  IdleModeMobilityControlInfo.cc
  FreqPriorityListEUTRA.cc
  FreqPriorityEUTRA.cc
  FreqsPriorityListGERAN.cc
  FreqsPriorityGERAN.cc
  FreqPriorityListUTRA_FDD.cc
  FreqPriorityUTRA_FDD.cc
  FreqPriorityListUTRA_TDD.cc
  FreqPriorityUTRA_TDD.cc
  BandClassPriorityListHRPD.cc
  BandClassPriorityHRPD.cc
  BandClassPriorityList1XRTT.cc
  BandClassPriority1XRTT.cc
  CellInfoListGERAN_r9.cc
  CellInfoGERAN_r9.cc
  CellInfoListUTRA_FDD_r9.cc
  CellInfoUTRA_FDD_r9.cc
  CellInfoListUTRA_TDD_r9.cc
  CellInfoUTRA_TDD_r9.cc
  RRCConnectionRequest.cc
  RRCConnectionRequest_r8_IEs.cc
  InitialUE_Identity.cc
  EstablishmentCause.cc
  RRCConnectionSetup.cc
  RRCConnectionSetup_r8_IEs.cc
  RRCConnectionSetup_v8a0_IEs.cc
  RRCConnectionSetupComplete.cc
  RRCConnectionSetupComplete_r8_IEs.cc
  RRCConnectionSetupComplete_v8a0_IEs.cc
  RRCConnectionSetupComplete_v10xy_IEs.cc
  RegisteredMME.cc
  SecurityModeCommand.cc
  SecurityModeCommand_r8_IEs.cc
  SecurityModeCommand_v8a0_IEs.cc
  SecurityConfigSMC.cc
  SecurityModeComplete.cc
  SecurityModeComplete_r8_IEs.cc
  SecurityModeComplete_v8a0_IEs.cc
  SecurityModeFailure.cc
  SecurityModeFailure_r8_IEs.cc
  SecurityModeFailure_v8a0_IEs.cc
  SystemInformation.cc
  SystemInformation_r8_IEs.cc
  SystemInformation_v8a0_IEs.cc
  SystemInformationBlockType1.cc
  SystemInformationBlockType1_v890_IEs.cc
  SystemInformationBlockType1_v920_IEs.cc
  PLMN_IdentityList.cc
  PLMN_IdentityInfo.cc
  SchedulingInfoList.cc
  SchedulingInfo.cc
  SIB_MappingInfo.cc
  SIB_Type.cc
  CellSelectionInfo_v920.cc
  UECapabilityEnquiry.cc
  UECapabilityEnquiry_r8_IEs.cc
  UECapabilityEnquiry_v8a0_IEs.cc
  UE_CapabilityRequest.cc
  UECapabilityInformation.cc
  UECapabilityInformation_r8_IEs.cc
  UECapabilityInformation_v8a0_IEs.cc
  UEInformationRequest_r9.cc
  UEInformationRequest_r9_IEs.cc
  UEInformationRequest_v930_IEs.cc
  UEInformationRequest_v10xy_IEs.cc
  UEInformationResponse_r9.cc
  UEInformationResponse_r9_IEs.cc
  UEInformationResponse_v930_IEs.cc
  UEInformationResponse_v10xy_IEs.cc
  RLF_Report_r9.cc
  MeasResultNeighCells.cc
  MeasResultList2EUTRA_r9.cc
  MeasResult2EUTRA_r9.cc
  MeasResultList2UTRA_r9.cc
  MeasResult2UTRA_r9.cc
  MeasResultList2CDMA2000_r9.cc
  MeasResult2CDMA2000_r9.cc
  LogMeasReport_r10.cc
  MDT_MeasurementInfoList_r10.cc
  MDT_MeasurementInfo_r10.cc
  ULHandoverPreparationTransfer.cc
  ULHandoverPreparationTransfer_r8_IEs.cc
  ULHandoverPreparationTransfer_v8a0_IEs.cc
  ULInformationTransfer.cc
  ULInformationTransfer_r8_IEs.cc
  ULInformationTransfer_v8a0_IEs.cc
  SystemInformationBlockType2.cc
  AC_BarringConfig.cc
  MBSFN_SubframeConfigList.cc
  SystemInformationBlockType3.cc
  SystemInformationBlockType4.cc
  IntraFreqNeighCellList.cc
  IntraFreqNeighCellInfo.cc
  IntraFreqBlackCellList.cc
  SystemInformationBlockType5.cc
  InterFreqCarrierFreqList.cc
  InterFreqCarrierFreqInfo.cc
  InterFreqNeighCellList.cc
  InterFreqNeighCellInfo.cc
  InterFreqBlackCellList.cc
  SystemInformationBlockType6.cc
  CarrierFreqListUTRA_FDD.cc
  CarrierFreqUTRA_FDD.cc
  CarrierFreqListUTRA_TDD.cc
  CarrierFreqUTRA_TDD.cc
  SystemInformationBlockType7.cc
  CarrierFreqsInfoListGERAN.cc
  CarrierFreqsInfoGERAN.cc
  SystemInformationBlockType8.cc
  CellReselectionParametersCDMA2000.cc
  CellReselectionParametersCDMA2000_v920.cc
  NeighCellListCDMA2000.cc
  NeighCellCDMA2000.cc
  NeighCellsPerBandclassListCDMA2000.cc
  NeighCellsPerBandclassCDMA2000.cc
  NeighCellListCDMA2000_v920.cc
  NeighCellCDMA2000_v920.cc
  NeighCellsPerBandclassListCDMA2000_v920.cc
  NeighCellsPerBandclassCDMA2000_v920.cc
  PhysCellIdListCDMA2000.cc
  PhysCellIdListCDMA2000_v920.cc
  BandClassListCDMA2000.cc
  BandClassInfoCDMA2000.cc
  AC_BarringConfig1XRTT_r9.cc
  SystemInformationBlockType9.cc
  SystemInformationBlockType10.cc
  SystemInformationBlockType11.cc
  SystemInformationBlockType12_r9.cc
  SystemInformationBlockType13_r9.cc
  AntennaInfoCommon.cc
  AntennaInfoDedicated.cc
  AntennaInfoDedicated_v920.cc
  AntennaInfoDedicated_r10.cc
  CQI_ReportConfig.cc
  CQI_ReportConfigSCell_r10.cc
  CQI_ReportConfig_v920.cc
  CQI_ReportConfig_v10x0.cc
  CQI_ReportPeriodic.cc
  CrossCarrierSchedulingConfig_r10.cc
  CSI_RS_Config_r10.cc
  DRB_Identity.cc
  LogicalChannelConfig.cc
  MAC_MainConfig.cc
  DRX_Config.cc
  PDCP_Config.cc
  PDSCH_ConfigCommon.cc
  PDSCH_ConfigDedicated.cc
  PHICH_Config.cc
  PhysicalConfigDedicated.cc
  PhysicalConfigDedicatedSCell_r10.cc
  P_Max.cc
  PRACH_ConfigSIB.cc
  PRACH_Config.cc
  PRACH_ConfigSCell_r10.cc
  PRACH_ConfigInfo.cc
  PresenceAntennaPort1.cc
  PUCCH_ConfigCommon.cc
  PUCCH_ConfigDedicated.cc
  PUCCH_ConfigDedicated_v10x0.cc
  PUSCH_ConfigCommon.cc
  PUSCH_ConfigDedicated.cc
  PUSCH_ConfigDedicated_v10x0.cc
  UL_ReferenceSignalsPUSCH.cc
  RACH_ConfigCommon.cc
  RACH_ConfigDedicated.cc
  RadioResourceConfigCommonSIB.cc
  RadioResourceConfigCommon.cc
  RadioResourceConfigCommonSCell_r10.cc
  BCCH_Config.cc
  PCCH_Config.cc
  UL_CyclicPrefixLength.cc
  RadioResourceConfigDedicated.cc
  RadioResourceConfigDedicatedSCell_r10.cc
  SRB_ToAddModList.cc
  SRB_ToAddMod.cc
  DRB_ToAddModList.cc
  DRB_ToAddMod.cc
  DRB_ToReleaseList.cc
  RLC_Config.cc
  UL_AM_RLC.cc
  DL_AM_RLC.cc
  UL_UM_RLC.cc
  DL_UM_RLC.cc
  SN_FieldLength.cc
  T_PollRetransmit.cc
  PollPDU.cc
  PollByte.cc
  T_Reordering.cc
  T_StatusProhibit.cc
  RLF_TimersAndConstants_r9.cc
  RN_SubframeConfig_r10.cc
  FDD_SubframeConfig_r10.cc
  TDD_SubframeConfig_r10.cc
  SchedulingRequestConfig.cc
  SchedulingRequestConfig_v10x0.cc
  SoundingRS_UL_ConfigCommon.cc
  SoundingRS_UL_ConfigDedicated.cc
  SoundingRS_UL_ConfigDedicated_v10x0.cc
  SoundingRS_UL_ConfigDedicatedAperiodic_r10.cc
  SPS_Config.cc
  SPS_ConfigDL.cc
  SPS_ConfigUL.cc
  N1_PUCCH_AN_PersistentList.cc
  TDD_Config.cc
  TimeAlignmentTimer.cc
  TPC_PDCCH_Config.cc
  TPC_Index.cc
  UL_AntennaInfo_r10.cc
  UplinkPowerControlCommon.cc
  UplinkPowerControlCommon_v10x0.cc
  UplinkPowerControlCommonSCell_r10.cc
  UplinkPowerControlDedicated.cc
  UplinkPowerControlDedicatedSCell_r10.cc
  DeltaFList_PUCCH.cc
  NextHopChainingCount.cc
  SecurityAlgorithmConfig.cc
  ShortMAC_I.cc
  AdditionalSpectrumEmission.cc
  ARFCN_ValueCDMA2000.cc
  ARFCN_ValueEUTRA.cc
  ARFCN_ValueGERAN.cc
  ARFCN_ValueUTRA.cc
  BandclassCDMA2000.cc
  BandIndicatorGERAN.cc
  CarrierFreqCDMA2000.cc
  CarrierFreqGERAN.cc
  CarrierFreqsGERAN.cc
  ExplicitListOfARFCNs.cc
  CDMA2000_Type.cc
  CellIdentity.cc
  CellIndexList.cc
  CellIndex.cc
  CellReselectionPriority.cc
  CSFB_RegistrationParam1XRTT.cc
  CSFB_RegistrationParam1XRTT_v920.cc
  CellGlobalIdEUTRA.cc
  CellGlobalIdUTRA.cc
  CellGlobalIdGERAN.cc
  CellGlobalIdCDMA2000.cc
  CSG_Identity.cc
  MobilityControlInfo.cc
  CarrierBandwidthEUTRA.cc
  CarrierFreqEUTRA.cc
  MobilityParametersCDMA2000.cc
  MobilityStateParameters.cc
  PhysCellId.cc
  PhysCellIdRange.cc
  PhysCellIdRangeUTRA_FDDList_r9.cc
  PhysCellIdRangeUTRA_FDD_r9.cc
  PhysCellIdCDMA2000.cc
  PhysCellIdGERAN.cc
  PhysCellIdUTRA_FDD.cc
  PhysCellIdUTRA_TDD.cc
  PLMN_Identity.cc
  MCC.cc
  MNC.cc
  MCC_MNC_Digit.cc
  PreRegistrationInfoHRPD.cc
  SecondaryPreRegistrationZoneIdListHRPD.cc
  PreRegistrationZoneIdHRPD.cc
  Q_QualMin_r9.cc
  Q_RxLevMin.cc
  Q_OffsetRange.cc
  Q_OffsetRangeInterRAT.cc
  ReselectionThreshold.cc
  ReselectionThresholdQ_r9.cc
  SCellIndex_r10.cc
  ServCellIndex_r10.cc
  SpeedStateScaleFactors.cc
  SystemInfoListGERAN.cc
  SystemTimeInfoCDMA2000.cc
  TrackingAreaCode.cc
  T_Reselection.cc
  AllowedMeasBandwidth.cc
  Hysteresis.cc
  LocationInfo_r10.cc
  MeasConfig.cc
  MeasIdToRemoveList.cc
  MeasObjectToRemoveList.cc
  ReportConfigToRemoveList.cc
  MeasGapConfig.cc
  MeasId.cc
  MeasIdToAddModList.cc
  MeasIdToAddMod.cc
  MeasObjectCDMA2000.cc
  CellsToAddModListCDMA2000.cc
  CellsToAddModCDMA2000.cc
  MeasObjectEUTRA.cc
  CellsToAddModList.cc
  CellsToAddMod.cc
  BlackCellsToAddModList.cc
  BlackCellsToAddMod.cc
  MeasObjectGERAN.cc
  MeasObjectId.cc
  MeasObjectToAddModList.cc
  MeasObjectToAddMod.cc
  MeasObjectUTRA.cc
  CellsToAddModListUTRA_FDD.cc
  CellsToAddModUTRA_FDD.cc
  CellsToAddModListUTRA_TDD.cc
  CellsToAddModUTRA_TDD.cc
  CSG_AllowedReportingCells_r9.cc
  MeasResults.cc
  MeasResultListEUTRA.cc
  MeasResultEUTRA.cc
  MeasResultServFreqList_r10.cc
  MeasResultServFreq_r10.cc
  MeasResultListUTRA.cc
  MeasResultUTRA.cc
  MeasResultListGERAN.cc
  MeasResultGERAN.cc
  MeasResultsCDMA2000.cc
  MeasResultListCDMA2000.cc
  MeasResultCDMA2000.cc
  MeasResultForECID_r9.cc
  PLMN_IdentityList2.cc
  AdditionalSI_Info_r9.cc
  QuantityConfig.cc
  QuantityConfigEUTRA.cc
  QuantityConfigUTRA.cc
  QuantityConfigUTRA_v10x0.cc
  QuantityConfigGERAN.cc
  QuantityConfigCDMA2000.cc
  ReportConfigEUTRA.cc
  ThresholdEUTRA.cc
  ReportConfigId.cc
  ReportConfigInterRAT.cc
  ThresholdUTRA.cc
  ThresholdGERAN.cc
  ThresholdCDMA2000.cc
  ReportConfigToAddModList.cc
  ReportConfigToAddMod.cc
  ReportInterval.cc
  RSRP_Range.cc
  RSRQ_Range.cc
  TimeToTrigger.cc
  C_RNTI.cc
  DedicatedInfoCDMA2000.cc
  DedicatedInfoNAS.cc
  FilterCoefficient.cc
  MMEC.cc
  NeighCellConfig.cc
  OtherConfig_r9.cc
  ReportProximityConfig_r9.cc
  RAND_CDMA2000.cc
  RAT_Type.cc
  RRC_TransactionIdentifier.cc
  S_TMSI.cc
  UE_CapabilityRAT_ContainerList.cc
  UE_CapabilityRAT_Container.cc
  UE_EUTRA_Capability.cc
  UE_EUTRA_Capability_v920_IEs.cc
  UE_EUTRA_Capability_v940_IEs.cc
  UE_EUTRA_Capability_v10xy_IEs.cc
  AccessStratumRelease.cc
  PDCP_Parameters.cc
  PhyLayerParameters.cc
  PhyLayerParameters_v920.cc
  RF_Parameters.cc
  RF_Parameters_v10xy.cc
  SupportedBandListEUTRA.cc
  SupportedBandEUTRA.cc
  MeasParameters.cc
  BandListEUTRA.cc
  BandInfoEUTRA.cc
  InterFreqBandList.cc
  InterFreqBandInfo.cc
  InterRAT_BandList.cc
  InterRAT_BandInfo.cc
  IRAT_ParametersUTRA_FDD.cc
  IRAT_ParametersUTRA_v920.cc
  SupportedBandListUTRA_FDD.cc
  SupportedBandUTRA_FDD.cc
  IRAT_ParametersUTRA_TDD128.cc
  SupportedBandListUTRA_TDD128.cc
  SupportedBandUTRA_TDD128.cc
  IRAT_ParametersUTRA_TDD384.cc
  SupportedBandListUTRA_TDD384.cc
  SupportedBandUTRA_TDD384.cc
  IRAT_ParametersUTRA_TDD768.cc
  SupportedBandListUTRA_TDD768.cc
  SupportedBandUTRA_TDD768.cc
  IRAT_ParametersGERAN.cc
  IRAT_ParametersGERAN_v920.cc
  SupportedBandListGERAN.cc
  SupportedBandGERAN.cc
  IRAT_ParametersCDMA2000_HRPD.cc
  SupportedBandListHRPD.cc
  IRAT_ParametersCDMA2000_1XRTT.cc
  IRAT_ParametersCDMA2000_1XRTT_v920.cc
  SupportedBandList1XRTT.cc
  CSG_ProximityIndicationParameters_r9.cc
  NeighCellSI_AcquisitionParameters_r9.cc
  SON_Parameters_r9.cc
  UE_TimersAndConstants.cc
  MBMS_NotificationConfig_r9.cc
  MBSFN_AreaInfoList_r9.cc
  MBSFN_AreaInfo_r9.cc
  MBSFN_SubframeConfig.cc
  PMCH_InfoList_r9.cc
  PMCH_Info_r9.cc
  MBMS_SessionInfoList_r9.cc
  MBMS_SessionInfo_r9.cc
  PMCH_Config_r9.cc
  TMGI_r9.cc
)
